         when playback ends.
20050104 screenshot.[ch]: Undo bogus changes from 20050103.
20050105 sound/sdlsound.c: Use device to select SDL audio driver.
20050105 man/fuse.1: tweak comment about select SDL audio output type.
20050106 man/fuse.1: more hyphen fixups for UTF-8 and an open quote
	 (patch #1096868) (Stuart Brady).
20050107 event.[ch],fuse.c,machine.c,sound.[ch],spectrum.c,timer.[ch],
	 hacking/timer.txt,sound/lowlevel.h: modify timing routines to
	 simply execute enough tstates to match the (real) elapsed time.
	 Also allows variable frame rates (ie 60Hz for the TS2068)
	 (rest of patch #1080531) (Fred).
20050111 zxcf.c: Stop zxcf_reset overwriting romcs bank when zxcf isn't active
	 (fixes TR-DOS machines) (Fred).
20050111 machines/pentagon.c: Don't allow Interface I to be used with the
	 Pentagon, it masks the TR-DOS interface (Fred).
20050111 machines/pentagon.c: Remove if1 from peripherals array (Fred).
20050112 lib/{tape_ts2068.szx|Makefile.am}: Add TS2068 tape auto-load snapshot
         tape.c: Fix tape traps for TS2068 (Fred).
20050113 settings.dat,sound.c,sound/sdlsound.c,man/fuse.1: Allow the user to
         set the frequency to use with the sound card, and make the SDL sound
         driver pass back the obtained frequency if it is not able to get that
         originally requested as long as it gets a native endian 16 bit format
         (Fred).
20050113 ui/scaler/{scaler.[ch],scaler_internals.h,scalers.c},
         ui/sdl/sdldisplay.c: Undo accidental commit (Fred).
20050113 menu_data.c: add TS2068 to change ROMs menu.
20050114 ui/scaler/scalers.c: Undo accidental commit again (Fred).
20050115 settings.pl: Add short option for sound frequency (Fred).
20050115 hacking/implementation_notes.txt: update with new display algorithm.
20050115 sound/aosound.c: small fixes (Gergely).
20050115 man/fuse.1: add documentation for libao sound driver (Gergely).
20050205 Makefile.am: Add kempmouse.h to headers list (Fred).