@@ -32,7 +32,6 @@
 #include <stdlib.h>
 #include <unistd.h>
 #include <sys/types.h>
-#include <sys/socket.h>
 #include <sys/time.h>
 
 #include <SDL.h>
@@ -56,11 +55,20 @@ sound_lowlevel_init( const char *device, int *freqptr, int *stereoptr )
   int frag;
   int error;
 
-  if( device && ( error = setenv( "SDL_AUDIODRIVER", device, 1 ) ) ) {
-    settings_current.sound = 0;
-    ui_error( UI_ERROR_ERROR, "Couldn't set SDL_AUDIODRIVER: %s",
-              strerror ( error ) );
-    return 1;
+  /* I'd rather just use setenv, but Windows doesn't have it */
+  if( device ) {
+    const char *environment = "SDL_AUDIODRIVER=";
+    char *command = malloc( strlen( environment ) + strlen( device ) + 1 );
+    strcpy( command, environment );
+    strcat( command, device );
+    error = putenv( command );
+    free( command );
+    if( error ) { 
+      settings_current.sound = 0;
+      ui_error( UI_ERROR_ERROR, "Couldn't set SDL_AUDIODRIVER: %s",
+                strerror ( error ) );
+      return 1;
+    }
   }
 
   SDL_InitSubSystem( SDL_INIT_AUDIO );
